--- a/styles/style.css
+++ b/styles/style.css
@@ -78,12 +78,12 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 26px;   
-  width: 399px;
-  max-height: 534px;
+  width: 100%;
+  height: 100%;
 }
 
 .title {
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   font-size: 75px;
   line-height: 94%;
@@ -99,7 +99,7 @@ ol {
   flex-direction: column;
   gap: 30px;
   overflow-y: auto;
-  min-height: 296px;
+  height: 295px;
 }
 
 .content__list {
@@ -164,7 +164,7 @@ ol {
 
 .content__video-card-title {
   display: block;
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
@@ -320,6 +320,7 @@ ol {
 
 .button:focus-visible {
   outline: 1px solid #fff;
+  outline-offset: 2px;
 }
 
 
